# HitsHaunter

./: .gitignore  better_code.ipynb  demo_ghosts.ipynb  test.ipynb
HitsHaunter/: CMakeLists.txt  main.cpp
HitsHaunter/include/: Event.h  Hit.h  RootReader.h  RootWriter.h  StripModule.h  Vector2D.h
HitsHaunter/source/: Event.cpp  Hit.cpp  RootReader.cpp  RootWriter.cpp  StripModule.cpp  Vector2D.cpp  test.ipynb
